--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -20,12 +20,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14
-          cache: 'npm'
+          cache: "npm"
           cache-dependency-path: ./api/package-lock.json
       - name: install
         shell: bash
         run: npm ci
-      -name: run unit test
+      - name: run unit test
         shell: bash
         run: npm run test
-
